--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <title>Imagen a la Derecha</title>
+  <title>Lista de Imágenes</title>
+  <style>
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    li {
+      margin-bottom: 20px;
+    }
+    li img {
+      max-width: 100%;
+      border: 2px solid #ddd;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    <h1>Mi Página</h1>
-    <img src="https://cdn.pixabay.com/photo/2021/11/26/20/45/lantern-6826697_1280.jpg" alt="Descripción de la imagen" class="float-end img-fluid" style="max-width: 50%;">
-    <p>Este es el contenido de la página. La imagen debería estar alineada a la derecha.</p>
+    <h1 class="my-4">Lista de Imágenes</h1>
+    <ul>
+      <li class="d-flex align-items-center">
+        <img src="https://cdn.pixabay.com/photo/2021/11/26/20/45/lantern-6826697_1280.jpg" alt="Imagen 1" class="img-fluid me-3" style="width: 200px;">
+        <p>Esta es la primera imagen con su descripción correspondiente.</p>
+      </li>
+      <li class="d-flex align-items-center">
+        <img src="https://cdn.pixabay.com/photo/2021/11/26/20/45/lantern-6826697_1280.jpg" alt="Imagen 2" class="img-fluid me-3" style="width: 200px;">
+        <p>Esta es la segunda imagen con su descripción correspondiente.</p>
+      </li>
+    </ul>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
